# Project-Sentinel

./: CHANGELOG.md  Makefile  README.md  config.ini  enable_pam_sudo.sh  fix_live.sh  meson.build  pyproject.toml  setup.sh  sync_patch.sh  test_auth_crash.py  test_ipc.py  test_ipc_tui.py  uninstall.sh
core/: biometric_processor.py  camera_stream.py  instruction_manager.py  pam_sentinel.c  sentinel_client.py  sentinel_logger.py  sentinel_service.py
packaging/: 83-sentinel-camera.rules  sentinel-backend.service  sentinel-ui.desktop
sentinel-tui/: __init__.py  constants.py
sentinel-tui/screens/: __init__.py  authentication.py  dashboard.py  devices.py  diagnostics.py  enrollment.py  settings.py
sentinel-tui/services/: __init__.py  config_manager.py  ipc_client.py
sentinel-tui/styles/: app.tcss
sentinel-tui/widgets/: connection_status.py  log_viewer.py  progress_bar.py  status_indicator.py
sentinel_tui/: __main__.py  app.py  constants.py
sentinel_tui/screens/: authentication.py  dashboard.py  devices.py  diagnostics.py  enrollment.py  reviews.py  settings.py
sentinel_tui/scripts/: camera_preview.py  frame_preview.py
sentinel_tui/services/: ipc_client.py
sentinel_tui/tests/: __init__.py  test_tui_e2e.py
sentinel_tui/widgets/: __init__.py  connection_status.py  log_viewer.py
src/: AuthView.vala  CameraPreview.vala  EnrollView.vala  LoginView.vala  MainWindow.vala  SettingsView.vala  style.css
tests/: test_security_patches.py
tools/: check_daemon.sh  compute_model_checksums.py  fix_camera_selinux.sh  sign_galleries.py
