[project]
name = "sentinel-tui"
version = "0.1.0"
description = "Terminal UI for Project Sentinel – Biometric Authentication for Linux"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Project Sentinel Contributors" }]

dependencies = [
    "textual==0.86.0",
    "rich==13.7.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "textual-dev>=1.0.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sentinel-tui = "sentinel_tui.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel-tui"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]  # line too long — handled by formatter

[tool.pytest.ini_options]
testpaths = ["sentinel-tui/tests"]
